fix not centered block in reviews

--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -6,6 +6,7 @@
 }
 
 .reviews__item {
+  min-height: 100px;
   text-align: center;
 }
 
