--- a/sass/slider.scss
+++ b/sass/slider.scss
@@ -11,7 +11,7 @@
   }
 
   .slider__item--selected {
-    display: inline-block;
+    display: block;
   }
 }
 
